# Femto-Emacs

./: .gitignore  C-CODING-STANDARD.md  CHANGE.LOG.md  CMakeLists.txt  INSTALL  Makefile.macosx  README.md  README.original.md  aliases.scm  buffer.c  command.c  commandFemto.c  complete.c  data.c  display.c  displayFemto.c  femto  funcmap.c  gap.c  header.h  init.lsp  install.sh  interest.scm  key.c  keyFemto.c  libncursesw.rm  main.c  mainFemto.c  makefile  makefile.ascii  makefile.original  pscrap.c  public.h  r5rs.scm  replace.c  search.c  test.scm  undo.c  uninstall.sh  utils.c  (+2 more)
cmake/: Utils.cmake
docs/: C-CODING-STANDARD.md  hltest.c  hltest.py  interface-bindings.txt  undo.txt
femto/: README.original  commandFemto.c  data.c  display.c  gap.c  header.h  init.lsp  keyFemto.c  main.c  mainFemto.c  makefile  makefile.ascii  replace.c  search.c  test.scm  window.c
femto/femtolisp/: Makefile  femto.boot  femtosystem.lsp  flisp.boot  interface.c  operators.c  system.lsp
femtolisp/: Makefile  Makefile.interface  Makefile.interface~  Makefile.osx  aliases.scm  femto.boot  femtosystem.lsp  femtosystem.lsp~  flcall.c  flisp  flmain.c  gccx  interface.c  interface2editor.c  lixo.c  lst.py  mkeditorboot.lsp  read.c
haskell/: Doc.hs  haskellEd.hs
python/: ed.py  fib.py
samples/: bufmenu.scm  dired.cmd  dired.scm  fib.scm  killring.scm  kr-test.txt  quick.scm  square.scm  testkey.scm  undotest.scm
samples/haskell/: hello.hs  read.me
samples/ruby/: fib.rb  read.me
